--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,2 +1,5 @@
-<h1>Este é o nosso Sobre Nós!</h1>
-<p>:)</p>
+<div class="jumbotron">
+  <h1 class="display-4">Sobre este app!</h1>
+  <hr class="my-4">
+  <p class="display-5">Este app foi desenvolvido com o intuito de ensinar um pouquinho sobre a maravilha conhecida como Ruby e seu framework Ruby on Rails. Aqui são exemplificados alguns conceitos importante e que vão ser usados do mais simples ao mais complexo projeto</p>
+</div>
