--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Olá mundo!</h1>
-<p>:)</p>
+<div class="jumbotron">
+  <h1 class="display-4">Lista de Colegas</h1>
+  <p>
+    Ea elit in ad adipisicing sint incididunt minim ad dolor. Sint officia elit nisi aliqua Lorem proident laboris pariatur velit ea. Nostrud dolore veniam ut culpa elit commodo ad ullamco. Officia amet sit ullamco sunt sit eiusmod eu laborum. Commodo sit anim reprehenderit officia et Lorem incididunt eiusmod id sint ex. Anim enim excepteur mollit anim. Deserunt non irure non magna id enim nulla.
+    Ullamco amet do eu elit tempor est est.
+  </p>
+  <hr class="my-4">
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="#" role="button">Ir para minha Lista</a>
+  </p>
+</div>
