--- a/app/views/classmates/edit.html.erb
+++ b/app/views/classmates/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Classmate</h1>
+<h1>Editar colega</h1>
+<%= link_to 'Show', @classmate, class: 'btn btn-dark mb-5' %>
+<%= link_to 'Back', classmates_path, class: 'btn btn-dark mb-5' %>
 
 <%= render 'form', classmate: @classmate %>
 
-<%= link_to 'Show', @classmate %> |
-<%= link_to 'Back', classmates_path %>
