--- a/app/views/classmates/index.html.erb
+++ b/app/views/classmates/index.html.erb
@@ -1,15 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Classmates</h1>
-
-<table class="table">
-  <thead>
+<table class="table table-bordered">
+  <thead class="thead-dark">
     <tr>
-      <th>First name</th>
-      <th>Last name</th>
+      <th>Nome</th>
+      <th>Sobrenome</th>
       <th>Email</th>
-      <th>Age</th>
-      <th colspan="3"></th>
+      <th>Idade</th>
+      <th></th>
     </tr>
   </thead>
 
@@ -20,14 +18,14 @@
         <td><%= classmate.last_name %></td>
         <td><%= classmate.email %></td>
         <td><%= classmate.age %></td>
-        <td><%= link_to 'Show', classmate %></td>
-        <td><%= link_to 'Edit', edit_classmate_path(classmate) %></td>
-        <td><%= link_to 'Destroy', classmate, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to 'Show', classmate, class: 'btn btn-dark mr-2' %>
+          <%= link_to 'Edit', edit_classmate_path(classmate), class: 'btn btn-dark mr-2' %>
+          <%= link_to 'Destroy', classmate, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-dark' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Classmate', new_classmate_path %>
+<%= link_to 'New Classmate', new_classmate_path, class: 'btn btn-primary' %>
