--- a/app/views/classmates/new.html.erb
+++ b/app/views/classmates/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Classmate</h1>
+<h1>Novo Colega</h1>
+<%= link_to 'Back', classmates_path, class: 'btn btn-dark mb-5' %>
 
 <%= render 'form', classmate: @classmate %>
 
-<%= link_to 'Back', classmates_path %>
+
