--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -12,6 +12,10 @@
         <%= link_to 'Sobre', about_path, class:"nav-link" %>
       </li>
 
+      <li class="nav-item">
+        <%= link_to 'Colegas', classmates_path, class:"nav-link" %>
+      </li>
+
     </ul>
   </div>
 </nav>
